WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100406
Fix a layout test crash if a TestWebkitPlugin is put inside an iframe
https://bugs.webkit.org/show_bug.cgi?id=100406
Summary
Fix a layout test crash if a TestWebkitPlugin is put inside an iframe
Min Qin
Reported
2012-10-25 13:05:12 PDT
Fix a layout test crash if a TestWebkitPlugin is put inside an iframe
Attachments
Patch
(4.05 KB, patch)
2012-10-25 13:10 PDT
,
Min Qin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Min Qin
Comment 1
2012-10-25 13:10:07 PDT
Created
attachment 170718
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-25 18:52:55 PDT
Comment on
attachment 170718
[details]
Patch Rejecting
attachment 170718
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14553916
Min Qin
Comment 3
2012-10-25 18:56:00 PDT
This is wierd, do I also need to modify Source/WebCore/ChangeLog ?
Adam Barth
Comment 4
2012-10-25 18:59:39 PDT
Comment on
attachment 170718
[details]
Patch Sorry, it's another bug with the bots. :)
WebKit Review Bot
Comment 5
2012-10-25 20:24:06 PDT
Comment on
attachment 170718
[details]
Patch Clearing flags on attachment: 170718 Committed
r132565
: <
http://trac.webkit.org/changeset/132565
>
WebKit Review Bot
Comment 6
2012-10-25 20:24:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug