Fix a layout test crash if a TestWebkitPlugin is put inside an iframe https://bugs.webkit.org/show_bug.cgi?id=100406

Patch by Min Qin <qinmin@chromium.org> on 2012-10-25
Reviewed by Adam Barth.

Tools:

Resize the context with an empty rect will cause a gl_error in gles2_cmd_decoder.cc.
Don't paint the plugin if m_rect is empty.

* DumpRenderTree/chromium/TestWebPlugin.cpp:
(TestWebPlugin::updateGeometry):

LayoutTests:

Test for adding a webplugin into an iframe and make sure it doesn't crash.

* platform/chromium/plugins/plugin-inside-iframe-expected.txt: Added.
* platform/chromium/plugins/plugin-inside-iframe.html: Added.
* platform/chromium/plugins/resources/plugin-page.html: Added.

Canonical link: https://commits.webkit.org/118476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132565 268f45cc-cd09-0410-ab3c-d52691b4dbfc